--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
         <h1>Turn <strong>your picture</strong>  into an iconic<strong><br> card avatar</strong></h1>
         <P>CURRENTLY IN BETA</P>
-        <p class="joy">POWERD BY CSS</p>
+        <p class="joy">POWERD BY guhan</p>
     </div>
     
     <div class="Bio2">
