--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     
     <div class="Bio2">
-        <img src="./vecteezy_modern-male-avatar-with-black-hair-and-hoodie-illustration_48216761.png">
+        <img src="./guhan.gif">
         <h2>GUHAN</h2>
         <h3>WEB DEVELOPER</h3>
         <P>A Web Developer designs, builds, and maintains websites and web applications. They work with various technologies to create user-friendly, functional, and visually appealing online experiences.</P>
